# melusine

./: 404.html  README.md  index.html  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: main.yml  publish.yaml
advanced/ContentTagger/: index.html
advanced/CustomDetector/: index.html
advanced/ExchangeConnector/: index.html
advanced/PreTrainedModelsHF/: index.html
contribute/how_to_contribute/: index.html
contribute/maif/: index.html
docs/: mkdocs.yml
docs/docs/: index.md
history/history/: index.html
melusine/: __init__.py  base.py  detectors.py  message.py  pipeline.py  processors.py
melusine/backend/: __init__.py  active_backend.py  dict_backend.py  pandas_backend.py
melusine/conf/: __init__.py  _config.py  global.yaml
melusine/connectors/: exchange.py
melusine/data/: emails.json
melusine/io/: _classes.py
melusine/regex/: __init__.py
melusine/utils/: show_versions.py
philosophy/philosophy/: index.html
search/: search_index.json
tests/: conftest.py
tests/backend/: test_backends.py
tests/base/: test_melusine_regex.py
tests/detectors/: test_transfer_detector.py  test_vacation_reply_detector.py
tests/docs/: test_all_tutorials.py  test_configurations.py  test_detectors.py
tests/factory/: test_factory.py
tests/fixtures/: docs.py
tests/huggingface/: test_basic_classification.py
tests/integration/: test_pipeline_basic.py  test_regex_detector.py  test_reply_detector_config.py  test_transfer_detector_config.py  test_vacation_reply_detector_config.py
tests/io/: test_io_mixin.py  test_saver_mixin.py
(+43 files in other folders)
