[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melusine"
authors = [
    {name = "TODO", email = "todo@maif.fr"},
]
description = "Melusine is"
requires-python = ">=3.8"
keywords = ["nlp", "emails"]
license = {text = "todo"}
classifiers = [
    "Framework :: XYXY",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "arrow",
    "gensim >= 4.1.2",
    "pandas>2",
    "scikit-learn>=1",
    "tqdm>=4.34",
    "omegaconf>=2.0",
    "pydantic>=1.8,<2",
    # unidecode >= 1.0
    # flashtext >= 2.7
    # joblib >= 0.15
    # PyYAML >= 4.2
]
dynamic = ["version", "readme"]

[project.optional-dependencies] # Optional
dev = []
test = ["pytest", "coverage"]
misc = ["factory-boy"]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"conf" = ["*.json", "*.yaml", "*.yml",], "data" = ["*.csv"]}

[tool.setuptools.dynamic]
version = {attr = "melusine.VERSION"}
readme = {file = ["README.md"]}
